qt: Fix layout issues in OverviewPage

--- a/src/qt/res/css/general.css
+++ b/src/qt/res/css/general.css
@@ -1140,12 +1140,13 @@ QWidget .QFrame#frame .QLabel#labelBalanceText { /* Available Balance Label */
 
 QWidget .QFrame#frame .QLabel#labelBalance { /* Available Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
-    color: #008de4;
+    margin-bottom: -1px;
     margin-left: 0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchAvailable { /* Watch-only Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
+    margin-bottom: -2px;
     margin-left: 16px;
 }
 
@@ -1158,11 +1159,13 @@ QWidget .QFrame#frame .QLabel#labelPendingText { /* Pending Balance Label */
 
 QWidget .QFrame#frame .QLabel#labelUnconfirmed { /* Pending Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
+    margin-bottom: -2px;
     margin-left: 0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchPending { /* Watch-only Pending Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
+    margin-bottom: -2px;
     margin-left: 16px;
 }
 
@@ -1175,11 +1178,13 @@ QWidget .QFrame#frame .QLabel#labelImmatureText { /* Immature Balance Label */
 
 QWidget .QFrame#frame .QLabel#labelImmature { /* Immature Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
+    margin-bottom: -2px;
     margin-left: 0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchImmature { /* Watch-only Immature Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
+    margin-bottom: -2px;
     margin-left: 16px;
 }
 
@@ -1192,11 +1197,13 @@ QWidget .QFrame#frame .QLabel#labelTotalText { /* Total Balance Label */
 
 QWidget .QFrame#frame .QLabel#labelTotal { /* Total Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
+    margin-bottom: -2px;
     margin-left: 0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchTotal { /* Watch-only Total Balance */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
+    margin-bottom: -2px;
     margin-left: 16px;
 }
 
@@ -1211,20 +1218,14 @@ QWidget .QFrame#framePrivateSend { /* PrivateSend Widget */
     max-height: 350px;
 }
 
-QWidget .QFrame#framePrivateSend .QWidget#layoutWidgetPrivateSendHeader { /* PrivateSend Header */
-    background-color: transparent;
-    max-width: 421px;
-    min-width: 421px;
+QWidget .QFrame#framePrivateSend  > .QLabel {
+    min-width: 175px;
+    min-height: 26px;
 }
 
 QWidget .QFrame#framePrivateSend .QLabel#labelPrivateSendHeader { /* PrivateSend Header */
     qproperty-alignment: 'AlignVCenter | AlignLeft';
-    min-width: 180px;
-    color: #008de4;
-    margin-top: 0;
-    margin-right: 5px;
-    padding-right: 5px;
-    min-height: 30px;
+    margin-right: 10px;
 }
 
 QWidget .QFrame#framePrivateSend .QLabel#labelPrivateSendSyncStatus { /* PrivateSend Sync Status */
@@ -1234,77 +1235,56 @@ QWidget .QFrame#framePrivateSend .QLabel#labelPrivateSendSyncStatus { /* Private
     padding-right: 5px;
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget {
-    max-width: 451px;
-    max-height: 175px;
+QWidget .QFrame#framePrivateSend  .QLabel#labelPrivateSendEnabledText { /* PrivateSend Enabled Status Label */
+    qproperty-alignment: 'AlignVCenter | AlignRight';
+    margin-right: 10px;
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget > .QLabel {
-    min-width: 175px;
-    min-height: 25px;
+QWidget .QFrame#framePrivateSend  .QLabel#labelPrivateSendEnabled { /* PrivateSend Enabled Status */
+
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelPrivateSendEnabledText { /* PrivateSend Enabled Status Label */
+QWidget .QFrame#framePrivateSend  .QLabel#labelCompletitionText { /* PrivateSend Completion Label */
+    qproperty-alignment: 'AlignVCenter | AlignRight';
+    margin-right: 10px;
+}
+
+QWidget .QFrame#framePrivateSend  QProgressBar#privateSendProgress { /* PrivateSend Completion */
+    min-height: 13px;
+    max-height: 13px;
+    margin-top: 7px;
+}
+
+QWidget .QFrame#framePrivateSend  .QLabel#labelAnonymizedText { /* PrivateSend Balance Label */
     qproperty-alignment: 'AlignVCenter | AlignRight';
     min-width: 160px;
     margin-right: 5px;
     padding-right: 5px;
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelPrivateSendEnabled { /* PrivateSend Enabled Status */
-
+QWidget .QFrame#framePrivateSend  .QLabel#labelAnonymized { /* PrivateSend Balance */
+    margin-bottom: -2px;
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelCompletitionText { /* PrivateSend Completion Label */
+QWidget .QFrame#framePrivateSend  .QLabel#labelAmountAndRoundsText { /* PrivateSend Amount and Rounds Label */
     qproperty-alignment: 'AlignVCenter | AlignRight';
     min-width: 160px;
     margin-right: 5px;
     padding-right: 5px;
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QProgressBar#privateSendProgress { /* PrivateSend Completion */
-    border: 1px solid #aaa;
-    border-radius: 1px;
-    margin-right: 43px;
-    text-align: right;
-    color: #aaa;
+QWidget .QFrame#framePrivateSend  .QLabel#labelAmountRounds { /* PrivateSend Amount and Rounds */
+
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QProgressBar#privateSendProgress::chunk {
-    background-color: #008de4;
-    width: 1px;
-}
-
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelAnonymizedText { /* PrivateSend Balance Label */
+QWidget .QFrame#framePrivateSend  .QLabel#labelSubmittedDenomText { /* PrivateSend Submitted Denom Label */
     qproperty-alignment: 'AlignVCenter | AlignRight';
     min-width: 160px;
     margin-right: 5px;
     padding-right: 5px;
 }
 
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelAnonymized { /* PrivateSend Balance */
-
-}
-
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelAmountAndRoundsText { /* PrivateSend Amount and Rounds Label */
-    qproperty-alignment: 'AlignVCenter | AlignRight';
-    min-width: 160px;
-    margin-right: 5px;
-    padding-right: 5px;
-}
-
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelAmountRounds { /* PrivateSend Amount and Rounds */
-
-}
-
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelSubmittedDenomText { /* PrivateSend Submitted Denom Label */
-    qproperty-alignment: 'AlignVCenter | AlignRight';
-    min-width: 160px;
-    margin-right: 5px;
-    padding-right: 5px;
-}
-
-QWidget .QFrame#framePrivateSend #privateSendFormLayoutWidget .QLabel#labelSubmittedDenom { /* PrivateSend Submitted Denom */
+QWidget .QFrame#framePrivateSend  .QLabel#labelSubmittedDenom { /* PrivateSend Submitted Denom */
 
 }
 
@@ -1313,22 +1293,13 @@ QWidget .QFrame#framePrivateSend .QWidget#layoutWidgetLastMessageAndButtons {
 }
 
 QWidget .QFrame#framePrivateSend .QLabel#labelPrivateSendLastMessage { /* PrivateSend Status Notifications */
-    qproperty-alignment: 'AlignVCenter | AlignCenter';
+    qproperty-alignment: 'AlignVCenter | AlignLeft';
     min-width: 288px;
-    min-height: 43px;
-}
-
-QWidget .QFrame#framePrivateSend QPushButton:focus {
-    border: none;
-    outline: none;
+    min-height: 50px;
 }
 
 QWidget .QFrame#framePrivateSend .QPushButton#togglePrivateSend { /* Start PrivateSend Mixing */
-    min-height: 40px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 6px;
+    margin-top: 5px;
 }
 
 QWidget .QFrame#framePrivateSend .QPushButton#togglePrivateSend:hover {
